--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <!-- INSTRUMENTATION NECESARIO PARA ANDROID TEST -->
-    <instrumentation
-        android:name="androidx.test.runner.AndroidJUnitRunner"
-        android:targetPackage="cl.duoc.level_up_mobile" />
+    xmlns:tools="http://schemas.android.com/tools"
+    package="cl.duoc.level_up_mobile">
 
     <application
         android:allowBackup="true"
